tests/compile_fail/serial_invalid_literal.rs
#[skuld::label]
const MY_LABEL: skuld::Label;

#[skuld::test(serial = 42)]
fn bad_serial_literal() {}

fn main() {}
