tests/compile_fail/serial_invalid_literal.stderr
error: expected identifier
 --> tests/compile_fail/serial_invalid_literal.rs:4:24
  |
4 | #[skuld::test(serial = 42)]
  |                        ^^
